charts/stirling-pdf/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: stirling-pdf-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: stirling-pdf
  oidc:
    provider:
      issuer: "https://auth.g4v.dev/application/o/stirling-pdf/"
    clientID: "j4z4dscGOQVKvzLp97OzjQI7wnJ5ZD5HpBGah6K2"
    clientSecret:
      name: "stirling-pdf-client-secret"
    redirectURL: "https://pdf.g4v.dev/oauth2/callback"
    logoutPath: "/myapp/logout"
